src/app/components/top-tracks/top-tracks.component.css
.track-tile {
    position: relative;
    display: inline-block; /* added */
    overflow: hidden; /* added */
}

.track-tile img:hover {
    opacity: 0.5
}
.track-tile:hover a {
    opacity: 1; /* added */
    top: 0; /* added */
    z-index: 1;
}
/* added */
.track-tile:hover a span {
    top: 50%;
    position: absolute;
    left: 0;
    right: 0;
    transform: translateY(-50%);
}
/* added */
.track-tile a {
    display: block;
    position: absolute;
    top: -100%;
    opacity: 0;
    left: 0;
    bottom: 0;
    right: 0;
    text-align: center;
    color: inherit;
}
i.play {
  margin-left: 5%;
  opacity: 0.95;
}
i.pause {
  opacity: 0.95;
}

